# fairjax

./: .gitignore  Cargo.toml  README.md  justfile
.cargo-husky/hooks/: pre-commit
.github/workflows/: rust_checks.yaml
examples/: Cargo.toml
examples/examples/: actix.rs  jobs.rs  partitions.rs  simple.rs  switch.rs  workers.rs
fairjax/: Cargo.toml  LICENSE.md
fairjax/examples/: jobs.rs  partitions.rs  simple.rs  switch.rs
fairjax/src/: case.rs  definition.rs  derive.rs  lib.rs  manager.rs  pattern.rs  traits.rs  utils.rs
fairjax/src/analyse/: bundle.rs  content.rs  definition.rs  groups.rs  profile.rs  strategy.rs
fairjax/src/analyse/partition/: clean.rs  counts.rs  mod.rs  var.rs
fairjax/src/case/: mod.rs
fairjax/src/compile/: case.rs  definition.rs  top.rs
fairjax/src/compile/case/: accept.rs  action.rs  declaration.rs  guard.rs
fairjax/src/compile/matcher/: brute_force.rs  stateful_tree.rs
fairjax/src/compile/matchers/: mod.rs
fairjax/src/compile/matchers/brute_force/: mod.rs
fairjax/src/compile/matchers/partitions/: key.rs  mod.rs
fairjax/src/compile/matchers/stateful_tree/: element_mapping.rs  mappings.rs  match_arms.rs  mod.rs  profile.rs
fairjax/src/compile/pattern/: full.rs  stateful_tree.rs  sub.rs
fairjax/src/compile/sections/: action.rs  setup.rs
fairjax/src/consume/: mod.rs
fairjax/src/parse/: case.rs  context.rs  definition.rs  pattern.rs  strategy.rs  sub_pattern.rs
fairjax/tests/: main.rs
fairjax/tests/derive/: mod.rs
fairjax/tests/match_fairest_case/: mod.rs
fairjax/tests/match_fairest_case/pass/: expand.rs  simple.rs  syntax.rs
fairjax/tests/select/: mod.rs
fairjax/tests/select/pass/: syntax.rs
fairjax_core/: Cargo.toml
fairjax_core/src/: any.rs  definition.rs  id.rs  lib.rs  mailbox.rs  mapping.rs  matchgroup.rs  pattern.rs  tree.rs
fairjax_core/src/brute_force/: mod.rs
fairjax_core/src/matching/: case_match.rs  matched_ids.rs  matched_messages.rs
fairjax_core/src/stateful_tree/: mod.rs  permute.rs  tree.rs
fairjax_core/src/strategies/brute_force/: mod.rs
fairjax_core/src/strategies/partitions/: mod.rs
fairjax_core/src/strategies/stateful_tree/: mod.rs  permute.rs  tree.rs
fairjax_core/tests/: shop_floor_tests.rs
src/: definition.rs  lib.rs  main.rs  message.rs  pattern.rs
test_suite/: Cargo.toml
test_suite/benches/: equal_cases.rs  groups.rs  many_to_one.rs  pairs.rs  permutations.rs  separate_pairs.rs  sums.rs  transitive.rs  workers.rs
test_suite/src/: lib.rs
test_suite/src/scenarios/: chess.rs  equal_cases.rs  groups.rs  many_to_one.rs  pairs.rs  permutations.rs  separate_pairs.rs  shuffled_pairs.rs  sums.rs  transitive.rs  workers.rs
test_suite/tests/: mod.rs  test.rs
test_suite/tests/functional/: guard_constants.rs  guard_traditional.rs
test_suite/tests/random/: equal_cases.rs  groups.rs  many_to_one.rs  pairs.rs  permutations.rs  seperate_pairs.rs  shuffled_pairs.rs  sums.rs  transitive.rs  workers.rs
test_suite/tests/random/partitions/: chess.rs  groups.rs  pairs.rs  seperate_pairs.rs
test_suite/tests/random/stateful_tree/: chess.rs  equal_cases.rs  groups.rs  many_to_one.rs  pairs.rs  permutations.rs  seperate_pairs.rs  sums.rs  transitive.rs  workers.rs
tests/: shop_floor_tests.rs
