[package]
name = "fairjax"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo-husky = "1.5.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false                                         # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt"]
