[package]
name = "fairjax"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
fairjax_core = { path = "../fairjax_core" }
once_cell = "1.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version="2.0.106", features=["full"] }

[dev-dependencies]
proc-macro-utils = "0.10.0"
