[package]
name = "fairjax"
version = "0.1.0"
edition = "2024"
authors = ["Emil Skydsgaard <emilskydsgaard@gmail.com>", "Jonas Attrup <attrup.jonas@gmail.com>"]
categories = ["algorithms"]
description = "Fair join pattern matching"
documentation = "https://docs.rs/fairjax"
keywords = ["fairjax", "fair", "join", "pattern", "matching"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/emilostuff/fairjax"

[lib]
proc-macro = true

[dependencies]
fairjax_core = { version = "0.1.0", path = "../fairjax_core" }
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version="2.0.106", features=["full"] }

[dev-dependencies]
proc-macro-utils = "0.10.0"
