[package]
name = "test_suite"
version = "0.1.0"
edition = "2024"

[dependencies]
fairjax_core = { path = "../fairjax_core" }
fairjax = { path = "../fairjax" }
rand = "0.9.2"

[dev-dependencies]
serial_test = "3.2.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]
