[package]
name = "test_suite"
version = "0.1.0"
edition = "2024"

[dependencies]
fairjax_core = { path = "../fairjax_core" }
fairjax = { path = "../fairjax" }
rand = "0.9.2"
once_cell = "1.21.3"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "pairs"
harness = false

[[bench]]
name = "sums"
harness = false

[[bench]]
name = "transitive"
harness = false

[[bench]]
name = "many_to_one"
harness = false

[[bench]]
name = "permutations"
harness = false

[[bench]]
name = "workers"
harness = false

[[bench]]
name = "groups"
harness = false

[[bench]]
name = "equal_cases"
harness = false
